[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribev2"
version = "0.1.0"
description = "Deep multimodal brain encoding"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Meta Platforms, Inc."}]

dependencies = [
  "neuralset==0.0.2",
  "neuraltrain==0.0.2",
  "exca==0.5.20",
  "torch>=2.5.1,<2.7",
  "numpy>=2.2.6,<3.0",
  "torchvision>=0.20,<0.22",
  "x_transformers==1.27.20",
  "einops",
  "pyyaml",
  "moviepy>=2.2.1",
  "huggingface_hub",
  "gtts",
  "langdetect",
  "spacy",
  "soundfile",
  "Levenshtein",
  "julius",
  "transformers>=4.40.0",
  "pandas>=2.2.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/tribev2"
Repository = "https://github.com/facebookresearch/tribev2"

[project.optional-dependencies]
  plotting = [
    "nibabel",
    "matplotlib",
    "seaborn",
    "colorcet",
    "nilearn",
    "scipy",
    "pyvista",
    "scikit-image",
  ]
  training = [
    "nibabel",
    "torchmetrics>=1.0.0",
    "wandb>=0.16.0",
    "lightning>=2.5.0",
  ]
  test = [
    "pytest",
    "pytest-cov",
  ]
  transcription = [
    "uvx",
  ]
  datasets = [
    "datalad>=0.19.5",
    "openneuro-py",
    "nltk==3.8.1",
    "nltk_contrib @ git+https://github.com/nltk/nltk_contrib.git@683961c53f0c122b90fe2d039fe795e0a2b3e997",
  ]
  demo = [
    "gtts",
    "langdetect",
    "spacy",
    "soundfile",
  ]
  all = [
    "tribev2[plotting,training,test,transcription,datasets,demo]",
  ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["tribe*"]
